--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Luis Ek <luis.ek3@icloud.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pandas = "^1.4.3"
+mlflow = "^1.27.0"
 
 [tool.poetry.dev-dependencies]
 
