--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,10 @@ description = "demo of poetry"
 authors = ["Luis Ek <luis.ek3@icloud.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9,<3.10"
 pandas = "^1.4.3"
 mlflow = "^1.27.0"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 
